add multiple users support with in-memory and database integration using JPA, PostgreSQL, UserDetailsService, DaoAuthenticationProvider, and UserPrincipal