@@ -1,5 +1,6 @@
-package com.sb.springsecurity_demo;
+package com.sb.springsecurity_demo.controller;
 
+import com.sb.springsecurity_demo.model.Student;
 import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.security.web.csrf.CsrfToken;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -8,12 +9,13 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @RestController
 public class StudentController {
 
-    List<Student> students = new ArrayList<>(List.of(
+    List<Student> students = new ArrayList<>(Arrays.asList(
             new Student(1, "John", "Java"),
             new Student(2, "Jane", "Python")
     ));
